@@ -1,5 +1,7 @@
   * renamed executable 'newrelic_cmd' to 'newrelic'; old name still supported
     for backward compatibility
+  * added 'newrelic install' command to install a newrelic.yml file in the
+    current directory
 v2.12.0
   * support basic instrumentation for ActsAsSolr and Sunspot
 
